Specify inputs and outputs for tasks